@@ -41,6 +41,7 @@ Application Changes:
 - Sources of armor other than equippable armor and armor mods now get exported explicitly under the otherarmors node.
 - Ammo can now be unloaded from weapons without reloading them explicitly.
 - Implemented logic to allow child objects of gear to be capacity providers rather than just consumers.
+- Cyber/Bioware grades are now exposed to the Requirements system. This allows using the usual required/forbidden/careeronly/etc. nodes to selectively enable or disable a given cyberware grade.  Implements #4789
 
 Data Changes:
 - One with the Matrix I, II, and III can no longer be taken multiple times.
